# Image-Classification-Benchmark-with-CNN-and-Vision-Transformer

./: README.md  pyproject.toml  requirements-lite.txt  requirements.txt
configs/: benchmark_lite.yaml  benchmark_sample.yaml  bm25_baseline.yaml  dense_minilm.yaml  hybrid_lexical.yaml  hybrid_rerank_minilm.yaml  tfidf_baseline.yaml
data/: sample_course_docs.jsonl  sample_queries.jsonl
outputs/benchmark_lite/: benchmark_results.csv  benchmark_summary.csv  benchmark_table.tex
outputs/benchmark_lite/bm25/: metrics.json  query_report.csv  rankings.csv
outputs/benchmark_lite/hybrid_lexical/: per_query_metrics.csv  rankings.csv
outputs/benchmark_lite/tfidf/: rankings.csv
outputs/smoke_test/: metrics.json  per_query_metrics.csv  query_report.csv  rankings.csv
scripts/: build_corpus_from_folder.py  run_benchmark.py  run_experiment.py  smoke_test.py
src/course_doc_qa_retrieval/: __init__.py  data.py  experiment.py  metrics.py  rerankers.py  retrievers.py  utils.py
